# minerva

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  chatbot.py  chunking_strategy.md  collection_manager.py  docker-compose.yml  docker-entrypoint.sh  logger.py  process_docs.py  pyproject.toml  s3_connection.py  todo.md  upload_test_file.py
api/: database.py  main.py  models.py
api/repositories/: __init__.py  job_repository.py
api/routers/: __init__.py  documents.py  search.py
api/schemas/: error.py  job.py
api/static/: swagger_dark_theme.css
data/: minerva.db
docs/: api_strategy.md  implementation_api_todos.md  roadmap.md  user_facing_docs.md
migrations/: env.py
migrations/versions/: 001_create_jobs_table.py
minerva/: __init__.py  config.py  database.py  logging.py
minerva/chunker/: __init__.py  base.py  dense.py  sparse.py  types.py
minerva/embeddings/: base.py  exceptions.py  openai.py  types.py
minerva/parser/: base.py  markdown.py  types.py
minerva/s3/: handler.py  types.py
modules/: collection_manager.py  embedding_conf.py  embeddings.py  env.py  logger.py  s3_connection.py  splitter.py
scripts/: compare_embeddings.py  diagnostic.py  process_docs.py  upload_test_file.py
test_files/: les_miserables.md  paul_xue_interview.md  the_falcon.md
tests/: test_config.py  test_database.py  test_logging.py  test_s3_handler.py
tests/chunker/: test_dense_chunker.py  test_sparse_chunker.py  test_types.py
tests/embeddings/: test_openai_embedder.py
tests/parser/: test_md_parser.py
