[project]
name = "minerva"
version = "0.1.0"
description = "Document processing service for RAG applications"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "boto3",
    "python-dotenv",
    "tiktoken",
    "chromadb"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]