[project]
name = "minerva"
version = "0.1.0"
description = "Document processing service for RAG applications"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "boto3",
    "python-dotenv",
    "tiktoken",
    "chromadb",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]